[tool.poetry]
name = "flavor"
version = "0.1.0"
license = "MIT"
description = "Aioli Base Flavor"
authors = ["Aioli Project <aioli@vault13.org>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.2"
uvicorn = "^0.14.0"
marshmallow = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
